--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ h1 { color: black;}
 The "id" below refers to an "id tag" that styles this div in a specific way--you will find the styling in the .css file.-->
 
   <div id="bio">
-    <h1><u>Donté King</u> is a chicago native who interest lie in design. With a Bachelor of design degree (B.D), 
-      my focus lies in many areas within design. web design, Mobile app design, animation, digital , and print are a 
-      few passions of mine within this broad field.</h1>
+    <h1><u>Donté King</u> is a chicago native who interest lies in design. With a Bachelor of design degree (B.D), 
+      he focuses in many areas within design. Web design, mobile app design, animation, digital , and print are a 
+      few passions of his within this broad field.</h1>
   </div>
 
 <!--the "a href" tag creates a link. In this case, I gave each project its own link so
@@ -38,7 +38,7 @@ of each project div is labeled "project1" or "project2" (etc.)-->
     <ul> <!--"ul" means "unordered list. Each of the "li" (or "list items") will be marked with a bullet point.-->
       <h2>IDEAS 120 CLASS PROJECTS</h2>
       <li>PROJECT 1: <a href="https://dking30.github.io/HelpingHand/">Github Poetry</a></li>
-      <li>PROJECT 2: <a href="#project2">Zoom Background</a></li>
+      <li>PROJECT 2: <a href="https://vimeo.com/521524456">Zoom Background</a></li>
       <li>PROJECT 3: <a href="#project3">Twine Game</a></li>
       <li>PROJECT 4: <a href="#project4">Something Else</a></li>
     </ul>
