--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ of each project div is labeled "project1" or "project2" (etc.)-->
       <h2>IDEAS 120 CLASS PROJECTS</h2>
       <li>PROJECT 1: <a href="https://dking30.github.io/HelpingHand/">Github Poetry</a></li>
       <li>PROJECT 2: <a href="https://vimeo.com/521524456">Zoom Background</a></li>
-      <li>PROJECT 3: <a href="#project3">Twine Game</a></li>
-      <li>PROJECT 4: <a href="#project4">Something Else</a></li>
+      <li>PROJECT 3: <a href="https://dking30.github.io/TheGreatRace/">Twine Game</a></li>
+      <li>PROJECT 4: <a href="https://donteking.com">Website</a></li>
     </ul>
   </div>
 
@@ -49,34 +49,30 @@ of divs - in this case, the "img_left" class will style all the images I want to
 of the page.-->
   <div class="img_left" id="project1"><img src="images/steve.gif"></div>
   <div class="text_right">
-    <p><h3>PROJECT #1</h3></br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt erat ac sapien posuere aliquam. Suspendisse tincidunt in lacus vel auctor. Phasellus gravida commodo magna, fringilla sagittis
-      sem elementum et. Quisque non consectetur ex. Nunc volutpat, neque vel rhoncus mattis, erat leo feugiat libero, eu feugiat metus massa nec nulla. Suspendisse scelerisque, lectus in malesuada eleifend, ligula ipsum luctus justo, et sollicitudin
-      nisl arcu ut orci. Nullam quis magna at odio vulputate vulputate. Ut ante mi, elementum ut condimentum at, placerat venenatis orci. Fusce posuere, lacus vel dignissim congue, leo ipsum fringilla ligula, id rhoncus dolor magna sit amet neque. In
-      id gravida est. Vivamus tempus tempus risus, in mattis odio pretium at. In sit amet est vestibulum, ornare sem non, interdum leo.
+    <p><h3>PROJECT #1</h3></br>Consider what "uncreative writing" means, the rules of "flarf," and how it may be considered a 
+  type of generative web art. What kinds of webpages could be produced using randomized rules such as these? Using the Atom text editor 
+  and your GitHub account to create a Flarf poem.
     </p>
   </div>
 
   <div class="img_right" id="project2"><img src="images/catwtf.gif"></div>
   <div class="text_left">
-    <p><h3>PROJECT #2</h3></br>Aenean blandit, turpis ut porttitor ultricies, lacus lectus pretium dui, ac ornare orci erat sed elit. Quisque quis viverra justo. Morbi non hendrerit mauris. Aenean maximus et tortor vel
-      pharetra.
-      Nullam id ultrices augue. Nullam vel ultrices sem, quis efficitur ex. Nam congue lectus eu quam tristique fringilla.
+    <p><h3>PROJECT #2</h3></br>For this project create a video using any technique and tool of your choice that will 
+become the background environment for Zoom. Demo the video background in a Zoom session, using a screen recording application to 
+capture the results.
     </p>
   </div>
 
   <div class="img_left" id="project3"><img src="images/starwipe.gif"></div>
   <div class="text_right">
-    <p><h3>PROJECT #3</h3></br>Fusce tincidunt erat ac sapien posuere aliquam. Suspendisse tincidunt in lacus vel auctor. Phasellus gravida commodo magna, fringilla sagittis sem elementum et. Quisque non consectetur ex. Nunc
-      volutpat, neque vel rhoncus mattis, erat leo feugiat libero, eu feugiat metus massa nec nulla. Suspendisse scelerisque, lectus in malesuada eleifend, ligula ipsum luctus justo, et sollicitudin nisl arcu ut orci. Nam aliquet arcu sed massa
-      varius, vel luctus felis luctus. Nullam quis magna at odio vulputate vulputate. Ut ante mi, elementum ut condimentum at, placerat venenatis orci. Fusce posuere, lacus vel dignissim congue, leo ipsum fringilla ligula, id rhoncus dolor magna sit
-      amet neque. In id gravida est. Vivamus tempus tempus risus, in mattis odio pretium at. In sit amet est vestibulum, ornare sem non, interdum leo.</p>
+    <p><h3>PROJECT #3</h3></br>It's often the case that no two people come to the same place of understanding in exactly the same way. 
+A non-linear narrative leans on this idea as a feature, creating a rich world for players to explore on their way to a "destination", or not.</p>
   </div>
 
   <div class="img_right" id="project4"><img src="images/moarsteve.gif"></div>
   <div class="text_left">
-    <p><h3>PROJECT #4</h3></br>Aenean blandit, turpis ut porttitor ultricies, lacus lectus pretium dui, ac ornare orci erat sed elit. Quisque quis viverra justo. Morbi non hendrerit mauris. Aenean maximus et tortor vel
-      pharetra.
-      Nullam id ultrices augue. Nullam vel ultrices sem, quis efficitur ex. Nam congue lectus eu quam tristique fringilla.
+    <p><h3>PROJECT #4</h3></br>A collection of Donté King's visual aesthetics that expresses his take on design. 
+Enjoy the body of work through photography and creative digital works.
     </p>
   </div>
 
