--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ of each project div is labeled "project1" or "project2" (etc.)-->
 <!--the "class" tag works a lot like the "id" tag, except it's helpful to use for a whole class
 of divs - in this case, the "img_left" class will style all the images I want to align to the left
 of the page.-->
-  <div class="img_left" id="project1"><img src="images/steve.gif"></div>
+   <!--<div class="img_left" id="project1"><img src="images/steve.gif"></div>-->
   <div class="text_right">
     <p><h3>PROJECT #1</h3></br>Consider what "uncreative writing" means, the rules of "flarf," and how it may be considered a 
   type of generative web art. What kinds of webpages could be produced using randomized rules such as these? Using the Atom text editor 
@@ -55,7 +55,7 @@ of the page.-->
     </p>
   </div>
 
-  <div class="img_right" id="project2"><img src="images/catwtf.gif"></div>
+   <!--<div class="img_right" id="project2"><img src="images/catwtf.gif"></div>-->
   <div class="text_left">
     <p><h3>PROJECT #2</h3></br>For this project create a video using any technique and tool of your choice that will 
 become the background environment for Zoom. Demo the video background in a Zoom session, using a screen recording application to 
@@ -63,13 +63,13 @@ capture the results.
     </p>
   </div>
 
-  <div class="img_left" id="project3"><img src="images/starwipe.gif"></div>
+   <!--<div class="img_left" id="project3"><img src="images/starwipe.gif"></div>-->
   <div class="text_right">
     <p><h3>PROJECT #3</h3></br>It's often the case that no two people come to the same place of understanding in exactly the same way. 
 A non-linear narrative leans on this idea as a feature, creating a rich world for players to explore on their way to a "destination", or not.</p>
   </div>
 
-  <div class="img_right" id="project4"><img src="images/moarsteve.gif"></div>
+  <!-- <div class="img_right" id="project4"><img src="images/moarsteve.gif"></div>-->
   <div class="text_left">
     <p><h3>PROJECT #4</h3></br>A collection of Donté King's visual aesthetics that expresses his take on design. 
 Enjoy the body of work through photography and creative digital works.
