--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ of each project div is labeled "project1" or "project2" (etc.)-->
 of divs - in this case, the "img_left" class will style all the images I want to align to the left
 of the page.-->
    <!--<div class="img_left" id="project1"><img src="images/steve.gif"></div>-->
-  <div class="text_right">
+  <div class="text_left">
     <p><h3>PROJECT #1</h3></br>Consider what "uncreative writing" means, the rules of "flarf," and how it may be considered a 
   type of generative web art. What kinds of webpages could be produced using randomized rules such as these? Using the Atom text editor 
   and your GitHub account to create a Flarf poem.
