--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ capture the results.
   </div>
 
    <!--<div class="img_left" id="project3"><img src="images/starwipe.gif"></div>-->
-  <div class="text_right">
+  <div class="text_left">
     <p><h3>PROJECT #3</h3></br>It's often the case that no two people come to the same place of understanding in exactly the same way. 
 A non-linear narrative leans on this idea as a feature, creating a rich world for players to explore on their way to a "destination", or not.</p>
   </div>
