--- a/index.html
+++ b/index.html
@@ -64,16 +64,18 @@ capture the results.
   </div>
 
    <!--<div class="img_left" id="project3"><img src="images/starwipe.gif"></div>-->
-  <div class="text_left">
-    <p><h3>PROJECT #3</h3></br>It's often the case that no two people come to the same place of understanding in exactly the same way. 
-A non-linear narrative leans on this idea as a feature, creating a rich world for players to explore on their way to a "destination", or not.</p>
+  <div class="text_right">
+    <p><h3>PROJECT #4</h3></br>A collection of Donté King's visual aesthetics that expresses his take on design. 
+Enjoy the body of work through photography and creative digital works.
+    </p>
   </div>
 
   <!-- <div class="img_right" id="project4"><img src="images/moarsteve.gif"></div>-->
   <div class="text_left">
-    <p><h3>PROJECT #4</h3></br>A collection of Donté King's visual aesthetics that expresses his take on design. 
-Enjoy the body of work through photography and creative digital works.
-    </p>
+    <p><h3>PROJECT #3</h3></br>It's often the case that no two people come to the same place of understanding in exactly the same way. 
+A non-linear narrative leans on this idea as a feature, creating a rich world for players to explore on their way to a "destination", or not.</p>
+  </div>
+   
   </div>
 
 </body>
